--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -22,16 +22,16 @@ jobs:
 
           const octokit = github.getOctokit("YOUR_SECONDARY_REPO_TOKEN");
           const { data: workflowRuns } = await octokit.actions.listWorkflowRunsForRepo({
-            owner: "SECONDARY_REPO_OWNER",
-            repo: "SECONDARY_REPO_NAME",
+            owner: "farhanghaffar",
+            repo: "temp_repo_secondary",
             status: "queued"
           });
 
           if (workflowRuns.total_count === 0) {
             await octokit.actions.createWorkflowDispatch({
-              owner: "SECONDARY_REPO_OWNER",
-              repo: "SECONDARY_REPO_NAME",
-              workflow_id: "SECONDARY_WORKFLOW_ID",
+              owner: "farhanghaffar",
+              repo: "temp_repo_secondary",
+              workflow_id: "deploy",
               ref: "MAIN_BRANCH",
               inputs: {
                 pull_request_number: pullRequest.number
