--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -9,19 +9,21 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Trigger Secondary Repo Pipeline
-      uses: actions/github-script@0.9.0
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const { data: pullRequest } = await github.pulls.get({
+      - name: Install @actions/github
+        run: npm install @actions/github
+
+      - name: Trigger Secondary Repo Pipeline
+        run: |
+          const { GitHub, context } = require('@actions/github');
+          const octokit = new GitHub(process.env.GITHUB_TOKEN);
+
+          const { data: pullRequest } = await octokit.pulls.get({
             owner: context.repo.owner,
             repo: context.repo.repo,
             pull_number: context.payload.pull_request.number
           });
 
-          const octokit = github.getOctokit("YOUR_SECONDARY_REPO_TOKEN");
-          const { data: workflowRuns } = await octokit.actions.listWorkflowRunsForRepo({
+          const { data: workflowRuns } = await octokit.actions.listWorkflowRuns({
             owner: "farhanghaffar",
             repo: "temp_repo_secondary",
             status: "queued"
