--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -9,32 +9,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Trigger Secondary Repo Pipeline
-      uses: actions/github-script@0.9.0
-      with:
-        github-token: ${{ secrets.GITHUB_TOKEN }}
-        script: |
-          const { data: pullRequest } = await github.pulls.get({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-            pull_number: context.payload.pull_request.number
-          });
-
-          const octokit = github.getOctokit("YOUR_SECONDARY_REPO_TOKEN");
-          const { data: workflowRuns } = await octokit.actions.listWorkflowRunsForRepo({
-            owner: "farhanghaffar",
-            repo: "temp_repo_secondary",
-            status: "queued"
-          });
-
-          if (workflowRuns.total_count === 0) {
-            await octokit.actions.createWorkflowDispatch({
+    
+      - name: Install @actions/github
+        run: npm install @actions/github
+      - name: Trigger Secondary Repo Pipeline
+        uses: actions/github-script@0.9.0
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { data: pullRequest } = await github.pulls.get({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              pull_number: context.payload.pull_request.number
+            });
+  
+            const octokit = github.getOctokit("YOUR_SECONDARY_REPO_TOKEN");
+            const { data: workflowRuns } = await octokit.actions.listWorkflowRunsForRepo({
               owner: "farhanghaffar",
               repo: "temp_repo_secondary",
-              workflow_id: "deploy",
-              ref: "MAIN_BRANCH",
-              inputs: {
-                pull_request_number: pullRequest.number
-              }
+              status: "queued"
             });
-          }
+  
+            if (workflowRuns.total_count === 0) {
+              await octokit.actions.createWorkflowDispatch({
+                owner: "farhanghaffar",
+                repo: "temp_repo_secondary",
+                workflow_id: "deploy",
+                ref: "MAIN_BRANCH",
+                inputs: {
+                  pull_request_number: pullRequest.number
+                }
+              });
+            }
