--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -10,19 +10,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
-      - name: Upgrade pip
-        run: |
-          python -m pip install --upgrade pip
-          pip install pygithub
-          pip --version
-          
-      - name: Run Python script
-        run: python trigger_pipeline.py
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Trigger Workflow Dispatch
+      run: |
+        curl -X POST \
+          -H "Accept: application/vnd.github.v3+json" \
+          -H "Authorization: Bearer ${{ secrets.YOUR_TOKEN }}" \
+          -H "Content-Type: application/json" \
+          https://api.github.com/repos/farhanghaffar/temp_repo_secondary/actions/workflows/72571241/dispatches
