Update Trigger Secondary Repo Pipeline.yml

--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -21,3 +21,5 @@ jobs:
         pip --version
     - name: run python
       run: python trigger_pipeline.py
+      env: 
+        github-token: ${{ secrets.GITHUB_TOKEN }}
