--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -16,8 +16,7 @@ jobs:
         python-version: 3.x
     - name: Upgrade pip
       run: |
-        python -m pip install --upgrade pip
-        pip install allure-behave
+        pip install pygithub
         pip --version
     - name: run python
       run: python trigger_pipeline.py
