Update Trigger Secondary Repo Pipeline.yml

--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -17,6 +17,10 @@ jobs:
     - name: Upgrade pip
       run: ls
     - name: run python
-      run: python trigger_pipeline.py
+      run: |
+          ls
+          cd ..
+          python trigger_pipeline.py
+          
       env: 
         github-token: ${{ secrets.GITHUB_TOKEN }}
