Update Trigger Secondary Repo Pipeline.yml

--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
           ls
           cd ..
-          python trigger_pipeline.py
+          pwd
           
       env: 
         github-token: ${{ secrets.GITHUB_TOKEN }}
