--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -18,7 +18,7 @@ jobs:
       run: ls
     - name: run python
       run: |
-          ls
+          python trigger_pipeline.py
           
       env: 
         github-token: ${{ secrets.GITHUB_TOKEN }}
