--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -19,7 +19,9 @@ jobs:
       - name: Change directory
         run: cd NavigoPlatform  # Adjust the directory path if necessary
       - name: Upgrade pip
-        run: python -m pip install --upgrade pip
+        run: |
+            python -m pip install --upgrade pip
+            pip install pygithub
       - name: Run Python script
         run: |
             python trigger_pipeline.py
