--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Change directory
-        run: cd NavigoPlatform  # Adjust the directory path if necessary
+        run: cd NavigoPlatform 
       - name: Upgrade pip
         run: |
             python -m pip install --upgrade pip
