--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -1,4 +1,4 @@
-name: Trigger Secondary Repo Pipeline
+name: Run JavaScript Pipeline
 
 on:
   push:
@@ -10,22 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Set up Python
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.x
       - name: Checkout repository
         uses: actions/checkout@v2
-      - name: Change directory
-        run: cd NavigoPlatform 
-      - name: Upgrade pip
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+
+      - name: Install dependencies
+        run: npm install @octokit/core @octokit/auth-app
+
+      - name: Run JavaScript script
         run: |
-            python -m pip install --upgrade pip
-            pip install pygithub
-      - name: Run Python script
-        run: |
-            python trigger_pipeline.py
-        env: 
-          github-token: ${{ secrets.token }}
-          
-          
+          node trigger_secondary.js
+        env:
+          GITHUB_TOKEN: ${{ secrets.token }}
