--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -20,6 +20,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install @octokit/core @octokit/auth-app
+        
+      - name: Install dependencies
+        run: npm install @octokit/rest
 
       - name: Run JavaScript script
         run: |
