--- a/.github/workflows/Trigger Secondary Repo Pipeline.yml
+++ b/.github/workflows/Trigger Secondary Repo Pipeline.yml
@@ -22,7 +22,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          npm install @octokit/rest
+          npm install @octokit/core @octokit/rest
 
       - name: Run JavaScript script
         run: |
